fix storybook docs layout issues

--- a/storybook/components/DocsContainer/Layout/Layout.module.scss
+++ b/storybook/components/DocsContainer/Layout/Layout.module.scss
@@ -1,24 +1,22 @@
 @import "~@kaizen/design-tokens/sass/layout";
 
+// An approximation of storybooks default toc column size
+$storybook-toc: 150px;
+
 .main {
   max-width: $layout-content-max-width;
-  // margin: auto;
-  display: grid;
-  // Content width = 100% - TOC width - gap
-  // grid-template: "content sidebar" 1fr / minmax(calc(100% - 224px), 1fr) 200px;
-  grid-gap: 0 24px;
-}
-
-.sidebar {
-  grid-area: sidebar;
+  margin: auto;
 }
 
 .content {
-  grid-area: content;
-
   :global(code) {
     // If not set, the code overflows behind the TOC when it doesn't wrap.
     /* stylelint-disable-next-line declaration-no-important */
     white-space: pre-wrap !important;
   }
+}
+
+.docsWrapper {
+  max-width: calc(#{$layout-content-max-width} + #{$storybook-toc});
+  margin: auto;
 }
